--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
     <section class="classes">
         <h2>Classes taken</h2>
         <div class="carousel">
-            <button class="left-button">x</button>
+            <button class="left-button">&lsaquo;</button>
             <div id="carousel-container">
             </div>
-            <button class="right-button">x</button>
+            <button class="right-button">&rsaquo;</button>
         </div>
     </section>
     
