--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h1>Welcome.</h1>
             <p>My name is Louan. I am a <span class="gradient-text">Software Engineering</span> student at Rochester Institute of Technology. I have many types of projects from machine learning to back-end development.
             </p>
-            <a href="path/to/resume.pdf" class="download-btn" download>
+            <a href="resume-louan_flammanc.pdf" class="download-btn" download>
                 Download Resume
             </a>
         </section>
