--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav>
           <a href="#"><img src="email.png" alt="Mail"></a>
           <a href="https://github.com/Gloobinours"><img src="github-mark-white.png" alt="GitHub"></a>
-          <a href="#"><img src="linkedin.png" alt="LinkedIn"></a>
+          <a href="https://www.linkedin.com/in/louan-flammanc-07a349237/"><img src="linkedin.png" alt="LinkedIn"></a>
         </nav>
     </header>
 
@@ -54,7 +54,7 @@
     </section>
     
     <footer>
-        <p></p>
+        <p>Email me at <span class="gradient-text">louanflammanc.pro@gmail.com</span></p>
     </footer>
 
     <script src="main.js"></script>
