--- a/index.html
+++ b/index.html
@@ -25,7 +25,15 @@
         <!-- Welcome -->
         <section class="welcome">
             <h1>Welcome.</h1>
-            <p>My name is Louan. I am a <span class="gradient-text">Software Engineering</span> student at Rochester Institute of Technology. I have many types of projects from machine learning to back-end development.
+            <p>
+                Hello! My name is Louan, and I’m a passionate <span class="gradient-text">Software Engineering</span> 
+                student at <span class="gradient-text">Rochester Institute of Technology</span>. 
+                My experience spans a wide range of projects, from 
+                <span class="gradient-text">machine learning</span> applications 
+                to <span class="gradient-text">back-end development</span>. 
+                I’m currently seeking <span class="gradient-text">co-op</span> and 
+                <span class="gradient-text">internship</span> 
+                opportunities within the United States to contribute my skills and grow professionally.
             </p>
             <a href="resume-louan_flammanc.pdf" class="download-btn" download>
                 Download Resume
