--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <div class="logo">LF</div>
         <nav>
-          <a href="#"><img src="email.png" alt="Mail"></a>
+          <a onclick="sendEmail()"><img src="email.png" alt="Mail"></a>
           <a href="https://github.com/Gloobinours"><img src="github-mark-white.png" alt="GitHub"></a>
           <a href="https://www.linkedin.com/in/louan-flammanc-07a349237/"><img src="linkedin.png" alt="LinkedIn"></a>
         </nav>
