--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         <section class="projects">
             <h2>Projects</h2>
             <ul>
-                <li><a href="">Stock Prediction AI</a></li>
-                <li><a href="">Maze-AI</a></li>
-                <li><a href="">Tetris Game</a></li>
+                <li><a href="https://github.com/jhailos/stock-prediction">Stock Prediction AI</a></li>
+                <li><a href="https://github.com/Gloobinours/maze-ai">Maze-AI</a></li>
+                <li><a href="https://gloobinours.github.io/Tetris/Front/">Tetris Game</a></li>
             </ul>
         </section>
 
