--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <header>
         <div class="logo">LF</div>
         <nav>
-          <a href="#"><img src="email.png" alt="Mail"></a>
           <a href="https://github.com/Gloobinours"><img src="github-mark-white.png" alt="GitHub"></a>
           <a href="https://www.linkedin.com/in/louan-flammanc-07a349237/"><img src="linkedin.png" alt="LinkedIn"></a>
         </nav>
@@ -25,7 +24,14 @@
         <!-- Welcome -->
         <section class="welcome">
             <h1>Welcome.</h1>
-            <p>My name is Louan. I am a <span class="gradient-text">Software Engineering</span> student at Rochester Institute of Technology. I have many types of projects from machine learning to back-end development.
+            <p>
+                Hello! My name is Louan, and I’m a passionate <span class="gradient-text">Software Engineering</span> 
+                student at the <span class="gradient-text">Rochester Institute of Technology</span>. 
+                My experience spans a wide range of projects, 
+                from <span class="gradient-text">machine learning</span> applications to <span class="gradient-text">back-end</span> development. 
+                I’m currently seeking exciting <span class="gradient-text">co-op</span> 
+                and <span class="gradient-text">internship</span> opportunities 
+                within the United States to contribute my skills and grow professionally.
             </p>
             <a href="resume-louan_flammanc.pdf" class="download-btn" download>
                 Download Resume
@@ -35,10 +41,7 @@
         <!-- Projects -->
         <section class="projects">
             <h2>Projects</h2>
-            <ul>
-                <li><a href="">Stock Prediction AI</a></li>
-                <li><a href="">Maze-AI</a></li>
-                <li><a href="">Tetris Game</a></li>
+            <ul id="project-list">
             </ul>
         </section>
 
@@ -58,5 +61,6 @@
     </footer>
 
     <script src="main.js"></script>
+    <script src="projects.js"></script>
 </body>
 </html>
